--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 }
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(74, 59, 105, 0.6), rgba(255, 158, 181, 0.3)), url('https://placehold.jp/1920x1080.png?text=Event%20Image') center/cover;
+            background: linear-gradient(rgba(74, 59, 105, 0.6), rgba(255, 158, 181, 0.3)), url('MSC_rogo_back.jpg') center/cover;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -514,3 +514,4 @@
 </body>
 
 </html>
+
