--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <div class="cast-grid">
                 
                 <div class="cast-card">
-                    <img src="images/neko.png" alt="珈琲neco" class="cast-img">
+                    <img src="images/neko.jpg" alt="珈琲neco" class="cast-img">
                     <div class="cast-content">
                         <h3 class="cast-name">珈琲neco</h3>
                         <p class="cast-role">友達以上恋人未満 / 漫画好き</p>
@@ -530,3 +530,4 @@
 
 </body>
 </html>
+
